--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@google/genai": "^1.38.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
     "express": "^4.21.0",
+    "express-session": "^1.19.0",
+    "googleapis": "^171.0.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -24,7 +28,9 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.2",
     "@types/node": "^22.14.0",
     "@types/ws": "^8.5.12",
     "@vitejs/plugin-react": "^5.0.0",
