--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google/genai": "^1.38.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@types/session-file-store": "^1.2.6",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^4.21.0",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "session-file-store": "^1.5.0",
     "three": "^0.182.0",
     "ws": "^8.18.0"
   },
