Server implementation with gcloud

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,20 @@
-API_KEY=<YOUR API KEY>
+GEMINI_API_KEY=<YOUR_GEMINI_API_KEY>
 
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=<YOUR_GOAUTH_CLIENT_ID>
+GOOGLE_CLIENT_SECRET=<YOUR_GOAUTH_CLIENT_SECRET>
+GOOGLE_REDIRECT_URI=http://localhost:3001/api/auth/callback
+
+# Session Configuration
+SESSION_SECRET=change_this_to_a_random_32_char_string
+
+# Frontend URL
+FRONTEND_URL=http://localhost:3000
+
+# Optional: cookie settings for cross-site (Cloud Run + GitHub Pages)
+COOKIE_SECURE=false
+COOKIE_SAMESITE=lax
+
+# Frontend build-time API base URLs (set when building GH Pages)
+VITE_API_BASE_URL=http://localhost:3001
+VITE_WS_BASE_URL=ws://localhost:3001
