--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,6 +36,9 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
+          VITE_WS_BASE_URL: ${{ secrets.VITE_WS_BASE_URL }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
